--- a/application/composer.json
+++ b/application/composer.json
@@ -20,6 +20,7 @@
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
