--- a/application/composer.json
+++ b/application/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "^3.5",
         "filament/filament": "^2.0",
         "filipfonal/filament-log-manager": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
@@ -16,8 +17,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "pxlrbt/filament-environment-indicator": "^1.0",
-        "doctrine/dbal": "^3.5"
+        "pxlrbt/filament-environment-indicator": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
