--- a/application/composer.json
+++ b/application/composer.json
@@ -11,13 +11,11 @@
         "php": "^8.1",
         "doctrine/dbal": "^3.5",
         "filament/filament": "^2.0",
-        "filipfonal/filament-log-manager": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10",
-        "pxlrbt/filament-environment-indicator": "^1.0"
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
