--- a/application/composer.json
+++ b/application/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "^3.5",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "icetalker/filament-table-repeater": "^0.1.4",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
